--- a/RoupasRMIServer/bin/.gitignore
+++ b/RoupasRMIServer/bin/.gitignore
@@ -1,7 +1,1 @@
-/AluguelRoupasService.class
-/Roupa.class
-/Loja.class
-/AluguelRoupasImpl.class
-/Main.class
-/BD.class
-/RepositoryRoupas.class
+/BDRepository.class
